# partigraph

./: .readthedocs.yaml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.rst  conf.py  index.rst
src/partigraph/: __init__.py
