[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "partigraph"
version = "0.1.1"
description = "Graph partitioning algorithms using random spanning trees"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Todd Proebsting", email = "proebsting@arizona.edu"}
]
keywords = ["graph", "partition", "spanning-tree", "redistricting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "networkx",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/proebsting/partigraph"
Documentation = "https://proebsting.github.io/partigraph/"
Repository = "https://github.com/proebsting/partigraph"

[tool.setuptools.packages.find]
where = ["src"]
